--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,3 +18,15 @@ services:
       - "5002:5002"
     depends_on:
       - user_service  # DummyServiceがUserServiceに依存する
+
+  optimize_service:
+    build:
+      context: ./optimize
+    environment:
+      - JWT_SECRET_KEY=your_shared_secret_key # シークレットキーは各サービスで共有
+    ports:
+      - "5003:5003"
+    depends_on:
+      - user_service  # DummyServiceがUserServiceに依存する
+      - dummy_service
+  
