--- a/api/dummy/Dockerfile
+++ b/api/dummy/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.9-slim
 WORKDIR /app
 COPY . /app
-RUN pip install flask flask_jwt_extended
+RUN pip install flask flask_jwt_extended flask-cors
 ENV FLASK_APP=app.py
 CMD ["flask", "run", "--host=0.0.0.0", "--port=5002"]
