--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
       context: ./api/user
     environment:
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
+      - JWT_EXPIRE_SECONDS=${JWT_EXPIRE_SECONDS}
     ports:
       - "5001:5001"
 
