--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       context: ./api/user
     environment:
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
-      - JWT_EXPIRE_SECONDS=${JWT_EXPIRE_SECONDS}
+      - JWT_EXPIRE_SECONDS=30
     ports:
       - "5001:5001"
 
