--- a/streamlit/Dockerfile
+++ b/streamlit/Dockerfile
@@ -1,8 +1,10 @@
 FROM python:3.9-slim
 
 WORKDIR /st
-COPY . /st
+COPY requirements.txt /st
 RUN pip install -r requirements.txt
+
+COPY . /st
 
 EXPOSE 8501
 CMD ["streamlit", "run", "app.py",  "--server.port=8501"]
